[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/turrets/ScrapTurret/ScrapTurret.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.3
height = 0.2

[sub_resource type="SphereShape" id=2]
resource_local_to_scene = true

[node name="ScrapTurret" type="KinematicBody"]
collision_layer = 33
collision_mask = 0
script = ExtResource( 1 )
attack_cooldown = 3.0

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.4, 0 )
shape = SubResource( 1 )

[node name="Body" type="Spatial" parent="."]

[node name="CSGCombiner" type="CSGCombiner" parent="Body"]

[node name="Base" type="CSGBox" parent="Body/CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0 )
width = 0.5
height = 0.4
depth = 0.5

[node name="Dome" type="CSGSphere" parent="Body/CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.420058, 0 )
radius = 0.2

[node name="Barrel" type="CSGCylinder" parent="Body/CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 0.0850517, 0.996377, 0, -0.996377, 0.0850517, 0, 0.535728, -0.164556 )
radius = 0.05
height = 0.5
sides = 6

[node name="InnerBarrel" type="CSGCylinder" parent="Body/CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 0.0850517, 0.996377, 0, -0.996377, 0.0850517, 0, 0.535728, -0.164556 )
operation = 2
radius = 0.04
height = 0.5
sides = 6

[node name="Head" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.527803, 0 )

[node name="TargetCheckRaycast" type="RayCast" parent="Head"]
collision_mask = 12

[node name="TargetCheckArea" type="Area" parent="Head"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Head/TargetCheckArea"]
shape = SubResource( 2 )

[node name="ProjectileSpawnPoint" type="Position3D" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0409328, -0.47521 )
